correcting spacing for mobile when user is viewing film details and rating a post

--- a/client/src/RatingComponent.css
+++ b/client/src/RatingComponent.css
@@ -74,7 +74,7 @@ input[type='radio'] {
   }
 
   .note {
-    margin-top: 4rem;
+    margin-top: 0;
     width: 18rem;
     height: 20rem;
   }
